[workspace]
resolver = "2"
members = [
    "ordinal-map",
    "ordinal-map-derive",
]

[workspace.package]
version = "0.1.8"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/stepancheg/ordinal-map"

[workspace.lints.clippy]
len_zero = "allow"
module_inception = "allow"
question_mark = "allow"
wrong_self_convention = "allow"
