[package]
name = "ordinal-map-derive"
version = "0.1.2"
edition = "2021"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
categories = ["data-structures", "algorithms"]
description = "Ordinal trait to map values to integers and efficient maps and sets for such types"
documentation = "https://docs.rs/ordinal-map"
keywords = ["map", "set", "ordinal", "enum", "integer"]
license = "MIT"
repository = "https://github.com/stepancheg/ordinal-map"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.67", features = ["full"] }
proc-macro2 = "1.0.86"
quote = "1.0.36"
