[package]
name = "ordinal-map"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = ["data-structures", "algorithms"]
description = "Ordinal trait to map values to integers and efficient maps and sets for such types"
documentation = "https://docs.rs/ordinal-map"
keywords = ["map", "set", "ordinal", "enum", "integer"]
license = { workspace = true }
repository = { workspace = true }
readme = "../README.md"

[features]
default = []

[dependencies]
ordinal-map-derive = { path = "../ordinal-map-derive", version = "=0.1.8" }
either = { version = "1.15.0", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[lints]
workspace = true
